--- a/mot_tracker.ipynb
+++ b/mot_tracker.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "32806791-3979-4ed7-bf52-d3b8c42f239e",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,6 +174,8 @@
    "source": [
     "from IPython.display import HTML\n",
     "from base64 import b64encode\n",
+    "\n",
+    "target_webm = 'tracked_out.webm'\n",
     "\n",
     "mp4 = open(target_webm, \"rb\").read()\n",
     "data_url = \"data:video/webm;base64,\" + b64encode(mp4).decode()\n",
@@ -187,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
