--- a/carla_gt_tracker.ipynb
+++ b/carla_gt_tracker.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-22T02:39:12.258151Z",
@@ -303,7 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 42.44it/s]"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 36.18it/s]"
      ]
     },
     {
@@ -379,14 +379,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'00011': {'vehicles_0': {'b_box': [125, 201, 223, 297], 'color': (0, 0, 0), '3d_cord': [0.12079738173162746, 0.9905385301993452, 4.06]}, 'vehicles_1': {'b_box': [138, 0, 248, 97], 'color': (0, 0, 0), '3d_cord': [-3.966319547753645, 1.0730139839333532, 3.22]}}, '00015': {'vehicles_0': {'b_box': [125, 192, 221, 287], 'color': (0, 0, 0), '3d_cord': [-0.02398095804819994, 0.9832192799761976, 4.03]}}, '00020': {'pedestrian_3': {'b_box': [84, 5, 117, 17], 'color': (0, 0, 0), '3d_cord': [-18.107110978875333, -2.8341565010413565, 13.23]}, 'vehicles_0': {'b_box': [125, 193, 222, 287], 'color': (0, 0, 0), '3d_cord': [-0.02398095804819994, 0.9832192799761976, 4.03]}, 'vehicles_6': {'b_box': [80, 33, 91, 60], 'color': (0, 0, 0), '3d_cord': [-33.310086283844086, -8.837369830407615, 28.56]}}}\n"
+      "Frame: 11:\n",
+      "The b_box of building_0 in frame 11 is [28, 177, 70, 231]\n",
+      "The color of building_0 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of building_0 in frame 11 is [-20.999107408509367, -65.09723296637905, 117.63]\n",
+      "The b_box of building_1 in frame 11 is [0, 0, 110, 105]\n",
+      "The color of building_1 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of building_1 in frame 11 is [-22.51538232668848, -10.49146087473966, 19.81]\n",
+      "The b_box of building_2 in frame 11 is [0, 173, 28, 245]\n",
+      "The color of building_2 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of building_2 in frame 11 is [-25.423623921451945, -92.72145194882475, 125.66]\n",
+      "The b_box of building_3 in frame 11 is [0, 93, 84, 159]\n",
+      "The color of building_3 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of building_3 in frame 11 is [-24.04879500148765, -22.51841713775662, 36.74]\n",
+      "The b_box of building_5 in frame 11 is [9, 353, 85, 472]\n",
+      "The color of building_5 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of building_5 in frame 11 is [39.47277595953585, -18.807616780720025, 39.02]\n",
+      "The b_box of building_6 in frame 11 is [21, 228, 70, 256]\n",
+      "The color of building_6 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of building_6 in frame 11 is [-1.2783100267777445, -60.71972627194286, 107.41]\n",
+      "The b_box of building_11 in frame 11 is [0, 153, 31, 177]\n",
+      "The color of building_11 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of building_11 in frame 11 is [-104.69503124070216, -168.06307646533767, 231.5]\n",
+      "The b_box of vegetation_0 in frame 11 is [0, 231, 111, 480]\n",
+      "The color of vegetation_0 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of vegetation_0 in frame 11 is [12.859982148170186, -13.72555786968164, 20.78]\n",
+      "The b_box of vehicles_0 in frame 11 is [125, 201, 223, 297]\n",
+      "The color of vehicles_0 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of vehicles_0 in frame 11 is [0.12079738173162746, 0.9905385301993452, 4.06]\n",
+      "The b_box of vehicles_1 in frame 11 is [138, 0, 248, 97]\n",
+      "The color of vehicles_1 in frame 11 is (0, 0, 0)\n",
+      "The 3d_cord of vehicles_1 in frame 11 is [-3.966319547753645, 1.0730139839333532, 3.22]\n",
+      "Frame: 15:\n",
+      "The b_box of building_0 in frame 15 is [24, 184, 71, 247]\n",
+      "The color of building_0 in frame 15 is (0, 0, 0)\n",
+      "The 3d_cord of building_0 in frame 15 is [-15.62249330556382, -63.79184766438559, 109.39]\n",
+      "The b_box of building_1 in frame 15 is [0, 0, 64, 62]\n",
+      "The color of building_1 in frame 15 is (0, 0, 0)\n",
+      "The 3d_cord of building_1 in frame 15 is [-20.2719428741446, -10.184468908063076, 16.3]\n",
+      "The b_box of building_2 in frame 15 is [0, 186, 24, 270]\n",
+      "The color of building_2 in frame 15 is (0, 0, 0)\n",
+      "The 3d_cord of building_2 in frame 15 is [-11.904552216602202, -87.53347218089854, 117.68]\n",
+      "The b_box of building_3 in frame 15 is [0, 60, 99, 159]\n",
+      "The color of building_3 in frame 15 is (0, 0, 0)\n",
+      "The 3d_cord of building_3 in frame 15 is [-21.672835465635224, -15.041594763463253, 27.18]\n",
+      "The b_box of building_5 in frame 15 is [0, 407, 92, 480]\n",
+      "The color of building_5 in frame 15 is (0, 0, 0)\n",
+      "The 3d_cord of building_5 in frame 15 is [41.00029753049687, -17.376316572448676, 32.81]\n",
+      "The b_box of building_6 in frame 15 is [7, 243, 70, 275]\n",
+      "The color of building_6 in frame 15 is (0, 0, 0)\n",
+      "The 3d_cord of building_6 in frame 15 is [9.304849747099077, -58.15531091936923, 97.73]\n",
+      "The b_box of building_11 in frame 15 is [0, 167, 24, 189]\n",
+      "The color of building_11 in frame 15 is (0, 0, 0)\n",
+      "The 3d_cord of building_11 in frame 15 is [-80.13329366260041, -170.9510264802142, 224.44]\n",
+      "The b_box of vegetation_0 in frame 15 is [0, 264, 93, 366]\n",
+      "The color of vegetation_0 in frame 15 is (0, 0, 0)\n",
+      "The 3d_cord of vegetation_0 in frame 15 is [9.956322523058613, -14.866289794703958, 22.92]\n",
+      "The b_box of vehicles_0 in frame 15 is [125, 192, 221, 287]\n",
+      "The color of vehicles_0 in frame 15 is (0, 0, 0)\n",
+      "The 3d_cord of vehicles_0 in frame 15 is [-0.02398095804819994, 0.9832192799761976, 4.03]\n",
+      "Frame: 20:\n",
+      "The b_box of building_0 in frame 20 is [22, 138, 71, 229]\n",
+      "The color of building_0 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of building_0 in frame 20 is [-38.07807200238024, -58.345432906872944, 103.21]\n",
+      "The b_box of building_2 in frame 20 is [0, 166, 21, 255]\n",
+      "The color of building_2 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of building_2 in frame 20 is [-25.30092234454031, -83.8925319845284, 111.89]\n",
+      "The b_box of building_3 in frame 20 is [0, 0, 111, 112]\n",
+      "The color of building_3 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of building_3 in frame 20 is [-22.845700684320143, -9.807497768521273, 19.39]\n",
+      "The b_box of building_5 in frame 20 is [0, 363, 86, 440]\n",
+      "The color of building_5 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of building_5 in frame 20 is [38.53555489437667, -21.62963403748884, 41.78]\n",
+      "The b_box of building_6 in frame 20 is [3, 225, 70, 258]\n",
+      "The color of building_6 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of building_6 in frame 20 is [0.0, -55.98012496280869, 92.23]\n",
+      "The b_box of building_11 in frame 20 is [0, 144, 24, 167]\n",
+      "The color of building_11 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of building_11 in frame 20 is [-111.00934245760189, -161.3507884558167, 216.92]\n",
+      "The b_box of pedestrian_3 in frame 20 is [84, 5, 117, 17]\n",
+      "The color of pedestrian_3 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of pedestrian_3 in frame 20 is [-18.107110978875333, -2.8341565010413565, 13.23]\n",
+      "The b_box of vegetation_0 in frame 20 is [0, 249, 101, 435]\n",
+      "The color of vegetation_0 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of vegetation_0 in frame 20 is [11.286283844094019, -15.415412079738172, 23.13]\n",
+      "The b_box of vehicles_0 in frame 20 is [125, 193, 222, 287]\n",
+      "The color of vehicles_0 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of vehicles_0 in frame 20 is [-0.02398095804819994, 0.9832192799761976, 4.03]\n",
+      "The b_box of vehicles_6 in frame 20 is [80, 33, 91, 60]\n",
+      "The color of vehicles_6 in frame 20 is (0, 0, 0)\n",
+      "The 3d_cord of vehicles_6 in frame 20 is [-33.310086283844086, -8.837369830407615, 28.56]\n"
      ]
     }
    ],
@@ -395,13 +484,16 @@
     "\n",
     "for key in new_data.keys():\n",
     "    if int(key) in [11, 15, 20]:\n",
+    "        print(f\"Frame: {int(key)}:\")\n",
     "        if key not in kb_for_desc.keys():\n",
     "            kb_for_desc[key] = {}\n",
     "        for obj in new_data[key].keys():\n",
-    "            if 'vehicle' in obj or 'pedestrian' in obj: # or 'building' in obj or 'vegetation' in obj:\n",
-    "                kb_for_desc[key][obj] = new_data[key][obj]\n",
+    "            if 'vehicle' in obj or 'pedestrian' in obj or 'building' in obj or 'vegetation' in obj:\n",
+    "                # kb_for_desc[key][obj] = new_data[key][obj]\n",
+    "                for s_key in new_data[key][obj].keys():\n",
+    "                    print(f'The {s_key} of {obj} in frame {int(key)} is {new_data[key][obj][s_key]}')\n",
     "\n",
-    "print(kb_for_desc)"
+    "# print(kb_for_desc)"
    ]
   },
   {
